src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccSource__c</fullName>
        <description>Phase 1 National</description>
        <label>Account Source2</label>
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teleflora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-prospecting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountCategory__c</fullName>
        <description>Phase 1 National</description>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agency &gt; Agency &gt; Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive &gt; Automotive &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Accessories &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Baby Fashion &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Bridal Fashion &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Children&apos;s Clothing &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; General Fashion &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Jewelry &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Maternity Fashion &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Shoes &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Shoes &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Insurance &gt; Finance and Insurance &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floral &gt; Floral &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage &gt; Baby Food &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage &gt; General Food &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage &gt; Wine and Spirits &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Baby Health &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Beauty &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; General Health &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Hospital &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Pharmaceutical &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Baby Gear &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Electronics &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Furnishings &gt; Home Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; General Home &gt; Home Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Home Improvement &gt; Home Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Real Estate &gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Registry &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Registry &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Tabletop &gt; Bridal Endemic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountSource2__c</fullName>
        <formula>TEXT( AccountSource )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountSource2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSourceHidden__c</fullName>
        <label>Account Source Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Anniversary_Status__c</fullName>
        <label>Anniversary Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Console_Link__c</fullName>
        <description>Formula field used to build a hyperlink to the specific Account record in Console.</description>
        <formula>HYPERLINK(&apos;/console#%2F&apos; + Id, &apos;Load Account in Console&apos;)</formula>
        <inlineHelpText>This link will open up the current account record in Console. This will only work if you are currently in the Console Application.</inlineHelpText>
        <label>Account Console Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Length__c</fullName>
        <description>This is to give the length of the account name</description>
        <formula>LEN( Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dormant</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActiveSubscriptionTCVSummary__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>CSP-1486 | sums up the TCV values of all active Subscription&apos;s belonging to this Account.</description>
        <inlineHelpText>Sums up the TCV values of all active Subscription&apos;s belonging to this Account</inlineHelpText>
        <label>Active Subscription TCV Summary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Hierarchy_Date__c</fullName>
        <label>Active Hierarchy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Hierarchy__c</fullName>
        <label>Active Hierarchy</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Status_Change_Date__c</fullName>
        <description>SF-1302</description>
        <label>Active Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active_Status_Stamp_Date__c</fullName>
        <description>CSP-3044</description>
        <label>Active Status Stamp Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Phase 1 National</description>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <label>Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Phone_Number__c</fullName>
        <label>Additional Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Amnesty_Promotion_Banner__c</fullName>
        <formula>IF( text(Amnesty_Promotion__c)==&apos;100% Amnesty Eligible&apos;, 
IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002M8N9&amp;oid=00Dj0000000KVB8&quot;,&quot;Cancel for Convenience&quot;,20,600), 
  IF (text(Amnesty_Promotion__c)==&apos;50% Amnesty Eligible&apos;, 
    IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002M8N5&amp;oid=00Dj0000000KVB8&quot;,&quot;Cancel for Convenience&quot;,20,600), 
&apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amnesty Promotion Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amnesty_Promotion__c</fullName>
        <label>Amnesty Promotion</label>
        <picklist>
            <picklistValues>
                <fullName>100% Amnesty Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% Amnesty Eligible</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <description>Plan to Deprecated for CSP-2731</description>
        <inlineHelpText>The very first contracted service start date or the first contracted service start date that occurs after 1 year of no active services</inlineHelpText>
        <label>Anniversary Date(deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anniversary_Status__c</fullName>
        <description>Plan to Deprecated for CSP-2892</description>
        <formula>IF(
   BLANKVALUE(Last_Contracted_Service_Date__c, DATE(1900,1,1))
        &lt; DATE(YEAR(TODAY()) - 1, MONTH(TODAY()), DAY(TODAY())),
   &quot;New&quot;,
   &quot;Existing&quot;
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>New is an account with no active subscriptions in the last year. 
Existing is an account with active subscriptions within the last year.</inlineHelpText>
        <label>Anniversary Status(deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-3219: Track vendors that have questions about the acquisition</description>
        <label>Announcement Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_to_a_Metro__c</fullName>
        <formula>NOT(ISBLANK( MetroArea__c ))</formula>
        <label>Associated to a Metro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_as_Local_Lead_Source__c</fullName>
        <formula>OR(ISPICKVAL(Type, &apos;Referral&apos;),ISPICKVAL(Type, &apos;Integration&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available as Local Lead Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDR_BP_Test_Text__c</fullName>
        <description>This field is being created per SS-4588. It looks at BDR BP Test and converts it into a string so the trigger can handle it.</description>
        <formula>IF( BDR_BP_test__c = True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDR BP Test Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDR_BP_test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requested on SS-2742</description>
        <label>BDR BP test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDR_Test_Score__c</fullName>
        <description>Plan to Deprecated for CSP-2731
SS-2986</description>
        <inlineHelpText>This field is being used as a Score field for the BDR testing that is happening. This field is manual and has no automation around it.</inlineHelpText>
        <label>BDR Test Score(deprecated)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>Phase 1</description>
        <label>BU</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <formula>IF( Cancel_For_Convenience__c==true,
IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002bVJt&amp;oid=00Dj0000000KVB8&quot;,&quot;Cancel for Convenience&quot;,20,600),
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beta_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the vendor is interested in volunteering to be a beta for XO Group. Created by SS-3694.
Also part of CSP-2671</description>
        <inlineHelpText>Indicate customers NOT interested in volunteering to be a beta for XO Group. This is how to opt them out</inlineHelpText>
        <label>Beta Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingID__c</fullName>
        <description>Phase 1 National</description>
        <label>Billing ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBBS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CBSS</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>Local_Core_Finance_ARR</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_CBBS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBSS_Email_Is_Matched__c</fullName>
        <description>This field is used to check CBSS email match ARR user&apos;s email.</description>
        <formula>ISBLANK(CBBS__c)  ||  CBSS_Email__c  =  CBBS__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBSS Email Is Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBSS_Email__c</fullName>
        <label>CBSS Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSS_Name__c</fullName>
        <formula>Owner.ARR__r.FirstName  &amp; &apos; &apos; &amp;  Owner.ARR__r.LastName</formula>
        <label>CBSS Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSS_Phone__c</fullName>
        <label>CBSS Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanadaZip__c</fullName>
        <formula>Text(value(BillingPostalCode))</formula>
        <label>Canada Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_For_Convenience__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel For Convenience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancellationDate__c</fullName>
        <description>Plan to Deprecated for CSP-2731</description>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CancellationNote__c</fullName>
        <description>Plan to Deprecated for CSP-2731</description>
        <label>Cancellation Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Plan to Deprecated for CSP-2731</description>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Card Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CasesafeID__c</fullName>
        <description>This field is the 18 DIgit ID field for Account. Added for CSP-2031</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is the 18 DIgit ID field for Account.</inlineHelpText>
        <label>CasesafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <formula>text(Primary_Category__r.Category_Group__c)</formula>
        <label>Category Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Back_Balance__c</fullName>
        <description>This field is used to track any balance that has been written off for the customer.</description>
        <label>Write-off Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckParentAccount__c</fullName>
        <formula>ISBLANK(Parent.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckParentAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <label>Commission Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConciergePrgQua__c</fullName>
        <description>Phase 1</description>
        <label>Concierge program qualification</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified from Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified for Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConciergeProgramStartDate__c</fullName>
        <label>Concierge Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConciergeState__c</fullName>
        <description>Phase 1</description>
        <label>Concierge State</label>
        <picklist>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennsylvania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rhode Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vermont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virginia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington DC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConciergeStatus__c</fullName>
        <description>Plan to Deprecated for CSP-2731
This is the status of Concierge Opportunity related to this Account except under the following two cases 
1. when the account has been cancelled from the Concierge Program 
2. when the account is on Hold from the Concierge Program</description>
        <formula>/***
IF( Cancelled__c , &apos;Cancelled&apos;, IF( Concierge_On_Hold__c, &apos;On Hold&apos;, text(Concierge_Opportunity__r.StageName) ) )
***/

&apos;Cancelled&apos;</formula>
        <label>Concierge Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concierge_Account_Owner_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concierge Account Owner Override</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concierge_On_Hold_Until__c</fullName>
        <description>Plan to Deprecated for CSP-2731
This Date is used to mark that a concierge venue is on hold until this date passes at which time the On Hold status will be revoked.</description>
        <inlineHelpText>The Concierge Venue will be On Hold from the venue search until this date passes.</inlineHelpText>
        <label>On Hold Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concierge_On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Plan to Deprecated for CSP-2731
This check box is used to mark a concierge venue that is in Program out of Program until the On Hold Until date hits.</description>
        <inlineHelpText>Check this box if the concierge venue needs to be on hold from getting recommendations in the venue search tab.</inlineHelpText>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concierge_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Plan to Deprecated for CSP-2731</description>
        <label>Concierge Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>You must choose a Concierge Opportunity</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Opp Concierge</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Venues in Program</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concierge_Owner__c</fullName>
        <description>This field is determining the concierge owner based on the concierge account owner override and the concierge opportunity owner.

IF(Concierge_Account_Owner_Override__c != &quot;&quot;, Concierge_Account_Owner_Override__r.FirstName&amp;&quot; &quot;&amp;Concierge_Account_Owner_Override__r.LastName, IF(Concierge_Opportunity__r.Owner.Id = &quot;&quot;, &quot;&quot;, Concierge_Opportunity__r.Owner.FirstName&amp;&quot; &quot;&amp;Concierge_Opportunity__r.Owner.LastName))</description>
        <formula>&quot;1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concierge Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concierge_Rate__c</fullName>
        <label>Concierge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Concierge_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox if this Account is a Concierge Vendor</inlineHelpText>
        <label>Concierge Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concierge_Venue_Alias__c</fullName>
        <label>Concierge Venue Alias</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>afasulo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jtocchet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cchuy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gborger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kmarino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jhaven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kotoole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lableson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lschneid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nanand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>opeck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pbittner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sniedzwi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Sponsorship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Phase 1.0.6 Concierge - indicate that an account record is managed by the concierge national team so that we do not accidentally email accounts that are already interested in the program.</description>
        <label>Corporate Sponsorship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditHold__c</fullName>
        <label>Credit Hold</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreditStatus__c</fullName>
        <description>Phase 1 National</description>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Credit Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Hold__c</fullName>
        <formula>IF(ISPICKVAL(CreditHold__c,&apos;Yes&apos;) , TRUE , FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CuratedDescription__c</fullName>
        <description>Phase 1</description>
        <label>Curated Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrentAdvertisingCompany__c</fullName>
        <label>Current Advertising Company</label>
        <picklist>
            <picklistValues>
                <fullName>WeddingWire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Bright Lights</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <description>Phase 1 National</description>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>SF-1534.  Revisited SF-2064</description>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANKRUPTCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBP-In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC CHARGEBACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNCXLD BAD PAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT HOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB&amp;W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAT/REG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT OF BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST ACCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH RETURN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_on_Payment_Arrangement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to identify whether a customer is on Payment Arrangement or not.</description>
        <label>Customer on Payment Arrangement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DE_Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SS-4768</description>
        <label>DE Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DE_Stealth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SS-4700</description>
        <label>DE Stealth</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>